# foodstuff

./: .gitignore  notes.txt
scripts/: import.py  parse_ingredient.py  scratch.ipynb
server/: CMakeLists.txt  food
server/__cmake_systeminformation/: CMakeCache.txt
server/src/: main.cpp
server/src/routes/: auth.cpp  auth.hpp  recipes.cpp  recipes.hpp  user.cpp  user.hpp
server/web/: asset-manifest.json  index.html
server/web/static/js/: 453.f1497243.chunk.js  453.f1497243.chunk.js.map  main.dc7699a8.js  main.dc7699a8.js.map
web/: package-lock.json  package.json
web/htmx/: index.html  profile.html  recipe.html  tags.html
web/htmx/auth/: login.html
web/htmx/recipe/: recipe.html  tags.html
web/htmx/user/: profile.html
